# xplane-acinfo

./: .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md  changelog.txt  config.mk
64/: lin.xpl
include/: acinfo.h
lua/: acinfo.lua
src/: CMakeLists.txt  acinfo.c  acinfo.mk
